完成历史日志查询

--- a/Client/Dt.Base/Structure/Tools/HistoryLogList.xaml
+++ b/Client/Dt.Base/Structure/Tools/HistoryLogList.xaml
@@ -12,24 +12,18 @@
         </a:Menu>
     </a:Tab.Menu>
     <Grid RowDefinitions="Auto,*">
-        <StackPanel Background="{StaticResource 浅灰1}" BorderThickness="0,0,0,1" BorderBrush="{StaticResource 浅灰2}" Padding="10">
-            <TextBlock x:Name="_tbInfo" Text="❌ 未加载日志文件" />
-            <StackPanel Orientation="Horizontal" Spacing="20" Margin="0,20,0,0">
-                <Button Content="&#xE02B;" Style="{StaticResource 字符按钮}" Click="OnFirstPage" />
-                <Button Content="&#xE010;" Style="{StaticResource 字符按钮}" Click="OnPrePage" />
-                <TextBox x:Name="_tbPageNum" Text="0" KeyUp="OnNumKeyUp" />
-                <TextBlock x:Name="_tbTotalPage" Text="/ 0 页" VerticalAlignment="Center" />
-                <Button Content="&#xE011;" Style="{StaticResource 字符按钮}" Click="OnNextPage" />
-                <Button Content="&#xE030;" Style="{StaticResource 字符按钮}" Click="OnLastPage" />
-                <TextBlock x:Name="_tbTotalRow" VerticalAlignment="Center" />
-            </StackPanel>
+        <StackPanel Orientation="Horizontal" Spacing="20" Background="{StaticResource 浅灰1}" BorderThickness="0,0,0,1" BorderBrush="{StaticResource 浅灰2}" Padding="10,0,10,0">
+            <Button Content="&#xE02B;" Style="{StaticResource 字符按钮}" Click="OnFirstPage" />
+            <Button Content="&#xE010;" Style="{StaticResource 字符按钮}" Click="OnPrePage" />
+            <TextBox x:Name="_tbPageNum" Text="0" KeyUp="OnNumKeyUp" />
+            <TextBlock x:Name="_tbTotalPage" Text="/ 0 页" VerticalAlignment="Center" />
+            <Button Content="&#xE011;" Style="{StaticResource 字符按钮}" Click="OnNextPage" />
+            <Button Content="&#xE030;" Style="{StaticResource 字符按钮}" Click="OnLastPage" />
+            <TextBlock x:Name="_tbTotalRow" Text="❌ 未加载日志文件" VerticalAlignment="Center" />
         </StackPanel>
         <a:Lv x:Name="_lv" ItemClick="OnOutputClick" Grid.Row="1">
             <DataTemplate>
-                <StackPanel Padding="10">
-                    <a:Dot ID="@t" />
-                    <a:Dot ID="msg" Height="40" />
-                </StackPanel>
+                <a:Dot Call="HisLogStyle.FormatItem" Padding="6" />
             </DataTemplate>
         </a:Lv>
     </Grid>
