Tab增加子列表功能，代替fifo中不显示Tab标签而在左上角显示列表的功能，优点：未加载不实例化

--- a/Client/Dt.Base/Themes/Styles/Win.xaml
+++ b/Client/Dt.Base/Themes/Styles/Win.xaml
@@ -199,7 +199,7 @@
                                     Width="50" />
                             <!--所有Tab列表按钮-->
                             <Button x:Name="TabListButton"
-                                    Visibility="{TemplateBinding TabListButtonVisibility}"
+                                    Visibility="{TemplateBinding ChildrenButtonVisibility}"
                                     Style="{StaticResource 浅字符按钮}"
                                     Content="&#xE05D;"
                                     VerticalAlignment="Stretch"
@@ -612,7 +612,7 @@
 
                         <!--所有Tab列表按钮-->
                         <Button x:Name="TabListButton"
-                                Visibility="{Binding Owner.SelectedItem.TabListButtonVisibility, RelativeSource={RelativeSource TemplatedParent}, FallbackValue=Collapsed, TargetNullValue=Collapsed}"
+                                Visibility="{Binding Owner.SelectedItem.ChildrenButtonVisibility, RelativeSource={RelativeSource TemplatedParent}, FallbackValue=Collapsed, TargetNullValue=Collapsed}"
                                 Content="&#xE05D;"
                                 Style="{StaticResource 字符按钮}"
                                 Foreground="{StaticResource 深灰1}"
