--- a/Client/Dt.Mgr/Root/DefaultHome.xaml
+++ b/Client/Dt.Mgr/Root/DefaultHome.xaml
@@ -3,8 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    xmlns:home="using:Dt.Mgr.Home"
-    AutoSaveLayout="False">
+    xmlns:home="using:Dt.Mgr.Home">
 
     <home:RootMenu x:Name="_menu" Order="1" a:Ex.Dock="Left" />
     <a:Tab Order="2" Title="动态" Icon="心电" />
