--- a/Client/Dt.MgrDemo/Stub/Home/DemoHome.xaml
+++ b/Client/Dt.MgrDemo/Stub/Home/DemoHome.xaml
@@ -4,8 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
     xmlns:home="using:Dt.Mgr.Home"
-    xmlns:l="using:Dt.MgrDemo"
-    AutoSaveLayout="False">
+    xmlns:l="using:Dt.MgrDemo">
 
     <home:RootMenu x:Name="_menu" Order="2" a:Ex.Dock="Left" />
     <l:DemoMain x:Name="_demo" Order="1" Icon="搬运工" />
