--- a/Client/Dt.UIDemo/Base/TabControlDemo.xaml
+++ b/Client/Dt.UIDemo/Base/TabControlDemo.xaml
@@ -9,7 +9,7 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="450" />
         </Grid.ColumnDefinitions>
-        <a:TabControl x:Name="_tab" Margin="0,0,10,0">
+        <a:TabControl x:Name="_tab" Margin="0,0,10,0" TabStripPlacement="TopLeft">
             <a:TabItem Title="首页">
                 <Grid>
                     <TextBlock Text="首页内容" HorizontalAlignment="Center" VerticalAlignment="Center" />
