--- a/Client/Dt.UIDemo/Win/SingleViewWin.xaml
+++ b/Client/Dt.UIDemo/Win/SingleViewWin.xaml
@@ -5,7 +5,7 @@
     xmlns:a="using:Dt.Base">
 
     <a:Main>
-        <a:Tabs x:Name="_tabs">
+        <a:Tabs x:Name="_tabs" TabStripPlacement="TopLeft">
             <a:Tab Title="主区单视图">
                 <a:Tab.Menu>
                     <a:Menu>
@@ -14,13 +14,25 @@
                     </a:Menu>
                 </a:Tab.Menu>
 
-                <StackPanel Margin="10">
+                <StackPanel Margin="10" Spacing="10">
                     <Button Content="切换图标" Click="OnToggleIcon" />
                     <Button Content="子窗口" Click="OnNewWin" />
                     <Button Content="带参数子窗口" Click="OnParamsWin" />
                     <CheckBox Content="Win模式显示标题栏" IsChecked="{Binding ShowHeader,Mode=TwoWay,ElementName=_tabs}" />
                     <CheckBox x:Name="_cbClosing" Content="禁止关闭" />
+                    <TextBlock Text="标签位置" Margin="0,20,0,0" />
+                    <StackPanel Orientation="Horizontal">
+                        <RadioButton Content="底部" GroupName="pos" Tag="3" Click="OnTabClick" />
+                        <RadioButton Content="左侧" GroupName="pos" Tag="0" Click="OnTabClick" />
+                        <RadioButton Content="右侧" GroupName="pos" Tag="2" Click="OnTabClick" />
+                        <RadioButton Content="顶部" GroupName="pos" Tag="1" Click="OnTabClick" />
+                        <RadioButton Content="左上角" GroupName="pos" Tag="4" Click="OnTabClick" />
+                    </StackPanel>
                 </StackPanel>
+            </a:Tab>
+            <a:Tab Title="主区2">
+            </a:Tab>
+            <a:Tab Title="主区3">
             </a:Tab>
         </a:Tabs>
     </a:Main>
