--- a/Client/Dt.Base/Structure/Tools/HistoryLogQuery.xaml
+++ b/Client/Dt.Base/Structure/Tools/HistoryLogQuery.xaml
@@ -5,21 +5,21 @@
     xmlns:a="using:Dt.Base"
     Title="查询"
     Icon="漏斗">
-    
+
     <a:QueryFv x:Name="_fv">
         <a:CBool ID="eninclude" Title="日志内容中包含文字，支持 &amp; 和 |" ShowTitle="False" />
-        <a:CText ID="include" ShowTitle="False" />
+        <a:CText ID="include" ShowTitle="False" KeyUp="OnKeyUp" />
         <a:CBool ID="enexclude" Title="日志内容中排除包含的文字，支持 &amp; 和 |" ShowTitle="False" />
-        <a:CText ID="exclude" ShowTitle="False" />
+        <a:CText ID="exclude" ShowTitle="False" KeyUp="OnKeyUp" />
         <a:CBool ID="enline" Title="行号范围" ShowTitle="False" />
         <a:CNum ID="startno" IsInteger="True" Title="始" TitleWidth="40" ColSpan="0.5" />
         <a:CNum ID="endno" IsInteger="True" Title="终" TitleWidth="40" ColSpan="0.5" />
         <a:CBool ID="ensrc" Title="日志来源，支持 &amp; 和 |" ShowTitle="False" />
-        <a:CText ID="src" ShowTitle="False" />
+        <a:CText ID="src" ShowTitle="False" KeyUp="OnKeyUp" />
         <a:CBool ID="enip" Title="服务端日志的客户端IP，支持 &amp; 和 |" ShowTitle="False" />
-        <a:CText ID="ip" ShowTitle="False" />
+        <a:CText ID="ip" ShowTitle="False" KeyUp="OnKeyUp" />
         <a:CBool ID="enuser" Title="服务端日志的用户ID，支持 &amp; 和 |" ShowTitle="False" />
-        <a:CText ID="user" ShowTitle="False" />
+        <a:CText ID="user" ShowTitle="False" KeyUp="OnKeyUp" />
         <a:CList ID="level" Title="级别">
             <a:CList.Items>
                 <x:String>全部</x:String>
