--- a/Client/Dt.Base/Themes/Styles/Desk.xaml
+++ b/Client/Dt.Base/Themes/Styles/Desk.xaml
@@ -26,12 +26,13 @@
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
                         <!--任务栏高40-->
-                        <Grid>
+                        <Grid x:Name="TaskbarGrid">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
-                            <Rectangle Fill="{StaticResource 浅灰1}" Stroke="{StaticResource 浅灰2}" IsHitTestVisible="False" Grid.ColumnSpan="2"/>
+                            <Rectangle Fill="{StaticResource 浅灰1}" Stroke="{StaticResource 浅灰2}" IsHitTestVisible="False" Grid.ColumnSpan="3"/>
                             <a:HomebarItem x:Name="HomeItem" />
                             <StackPanel x:Name="TaskbarPanel" Orientation="Horizontal" Grid.Column="1">
                                 <StackPanel.ChildrenTransitions>
