--- a/Client/Dt.Base/Themes/Styles/Desk.xaml
+++ b/Client/Dt.Base/Themes/Styles/Desk.xaml
@@ -28,13 +28,14 @@
                         <!--任务栏高40-->
                         <Grid x:Name="TaskbarGrid">
                             <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" MinWidth="20" />
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
-                            <Rectangle Fill="{StaticResource 浅灰1}" Stroke="{StaticResource 浅灰2}" IsHitTestVisible="False" Grid.ColumnSpan="3"/>
-                            <a:HomebarItem x:Name="HomeItem" />
-                            <StackPanel x:Name="TaskbarPanel" Orientation="Horizontal" Grid.Column="1">
+                            <Rectangle Fill="{StaticResource 浅灰1}" Stroke="{StaticResource 浅灰2}" IsHitTestVisible="False" Grid.ColumnSpan="4"/>
+                            <a:HomebarItem x:Name="HomeItem" Grid.Column="1" />
+                            <StackPanel x:Name="TaskbarPanel" Orientation="Horizontal" Grid.Column="2">
                                 <StackPanel.ChildrenTransitions>
                                     <TransitionCollection>
                                         <ReorderThemeTransition />
@@ -67,7 +68,6 @@
     <Style TargetType="a:HomebarItem">
         <Setter Property="Foreground" Value="{StaticResource 默认前景}" />
         <Setter Property="Width" Value="120" />
-        <Setter Property="Margin" Value="20,0,0,0" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="a:HomebarItem">
