--- a/Client/Dt.Mgr/Root/DefaultLogin.xaml
+++ b/Client/Dt.Mgr/Root/DefaultLogin.xaml
@@ -41,9 +41,9 @@
         </Grid>
 
         <StackPanel x:Name="LoginPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="2">
-            <TextBox x:Name="_tbPhone" PlaceholderText="手机号" KeyUp="OnPhoneKeyUp" InputScope="Number" />
-            <PasswordBox x:Name="_tbPwd" PlaceholderText="密码" KeyUp="OnPwdKeyUp" Margin="0,10,0,0" Visibility="Collapsed" />
-            <Grid x:Name="_pnlCode" Margin="0,10,0,0">
+            <TextBox x:Name="_tbPhone" PlaceholderText="账号或手机号" KeyUp="OnPhoneKeyUp" />
+            <PasswordBox x:Name="_tbPwd" PlaceholderText="密码" KeyUp="OnPwdKeyUp" Margin="0,10,0,0" />
+            <Grid x:Name="_pnlCode" Margin="0,10,0,0" Visibility="Collapsed" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
@@ -52,7 +52,7 @@
                 <Button x:Name="_btnCode" Content="获取验证码" Click="OnGetCode" Margin="10,0,0,0" Style="{StaticResource LoginButton}" Grid.Column="1" />
             </Grid>
             <Button Content="登　　录" Click="OnLoginClick" HorizontalAlignment="Stretch" Margin="0,20,0,20" Style="{StaticResource LoginButton}" />
-            <HyperlinkButton Content="密码登录" Click="OnTogglePwd" Foreground="White" />
+            <HyperlinkButton Content="手机验证码登录" Click="OnTogglePwd" Foreground="White" />
         </StackPanel>
     </Grid>
 </Page>
