--- a/Client/Dt.MgrDemo/一对多/父子/父表小儿List.xaml
+++ b/Client/Dt.MgrDemo/一对多/父子/父表小儿List.xaml
@@ -7,13 +7,13 @@
 
     <a:Tab.Resources>
         <a:Cols x:Key="TableView">
-            <a:Col ID="GROUP_ID" />
+            <a:Col ID="group_id" />
             <a:Col ID="小儿名" />
         </a:Cols>
 
         <DataTemplate x:Key="ListView">
             <StackPanel Padding="10">
-                <a:Dot ID="GROUP_ID" />
+                <a:Dot ID="group_id" />
                 <a:Dot ID="小儿名" />
             </StackPanel>
         </DataTemplate>
