--- a/Tools/DtTemplates/Dt/Tab/ListTab.xaml
+++ b/Tools/DtTemplates/Dt/Tab/ListTab.xaml
@@ -8,8 +8,8 @@
 
     <a:Tab.Menu>
         <a:Menu>
-            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnToSearch" />
-            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
+            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Call="OnQuery" />
+            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Call="OnAdd" />
         </a:Menu>
     </a:Tab.Menu>
 
