权限增加模块、功能两级目录，适用权限过多的情况

--- a/Client/Dt.Mgr/Rbac/Permission/Role4PerDlg.xaml
+++ b/Client/Dt.Mgr/Rbac/Permission/Role4PerDlg.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Dlg
-    x:Class="Dt.Mgr.Rbac.Role4PermissionDlg"
+    x:Class="Dt.Mgr.Rbac.Role4PerDlg"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
