--- a/Client/Dt.Mgr/Rbac/Permission/PerForm.xaml
+++ b/Client/Dt.Mgr/Rbac/Permission/PerForm.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Tab
-    x:Class="Dt.Mgr.Rbac.PermissionForm"
+    x:Class="Dt.Mgr.Rbac.PerForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
@@ -7,13 +7,12 @@
 
     <a:Tab.Menu>
         <a:Menu>
-            <a:Mi ID="保存" Icon="保存" ShowInPhone="Icon" Click="OnSave" IsEnabled="{Binding IsDirty,ElementName=_fv}" />
-            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
-            <a:Mi ID="删除" Icon="删除" Click="OnDel" />
+            <a:Mi ID="保存" Icon="保存" ShowInPhone="Icon" Call="Save" IsEnabled="{Binding IsDirty,ElementName=_fv}" />
+            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Call="Create" />
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Fv x:Name="_fv">
+    <a:Fv x:Name="_fv" Save="Save" Create="Create">
         <a:CText ID="Name" Title="权限名称" />
         <a:CText ID="Note" Title="权限描述" />
     </a:Fv>
