--- a/Client/Dt.Mgr/Rbac/Permission/PerFuncForm.xaml
+++ b/Client/Dt.Mgr/Rbac/Permission/PerFuncForm.xaml
@@ -1,19 +1,19 @@
 ﻿<a:Tab
-    x:Class="$rootnamespace$.$safeitemname$"
+    x:Class="Dt.Mgr.Rbac.PerFuncForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="$title$">
+    xmlns:l="using:Dt.Mgr.Rbac"
+    Title="编辑功能">
 
     <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="保存" Icon="保存" ShowInPhone="Icon" Call="Save" IsEnabled="{Binding IsDirty,ElementName=_fv}" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Call="Create" />
-            <a:Mi ID="删除" Icon="删除" Call="Delete" />
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Fv x:Name="_fv" Save="Save" Create="Create" Delete="Delete">
+    <a:Fv x:Name="_fv" Save="Save" Create="Create">
         <a:CText ID="name" Title="名称" />
         <a:CText ID="note" Title="描述" />
     </a:Fv>
