--- a/Client/Dt.Mgr/Rbac/Permission/PerModuleList.xaml
+++ b/Client/Dt.Mgr/Rbac/Permission/PerModuleList.xaml
@@ -1,9 +1,9 @@
 ﻿<a:Tab
-    x:Class="$rootnamespace$.$safeitemname$"
+    x:Class="Dt.Mgr.Rbac.PerModuleList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="$title$">
+    Title="模块列表">
 
     <a:Tab.Menu>
         <a:Menu>
@@ -12,7 +12,13 @@
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv" ItemClick="OnItemClick">
+    <a:Lv x:Name="_lv" ItemClick="OnItemClick" ItemDoubleClick="OnItemDoubleClick" ItemHeight="NaN">
+        <a:Ex.Menu>
+            <a:Menu>
+                <a:Mi ID="编辑" Icon="编辑" Click="OnEdit" />
+                <a:Mi ID="删除" Icon="删除" Click="OnDel" />
+            </a:Menu>
+        </a:Ex.Menu>
         <DataTemplate>
             <StackPanel Padding="10">
                 <a:Dot ID="name" />
