--- a/Client/Dt.Mgr/Rbac/Role/RolePerList.xaml
+++ b/Client/Dt.Mgr/Rbac/Role/RolePerList.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Tab
-    x:Class="Dt.Mgr.Rbac.RolePermissionList"
+    x:Class="Dt.Mgr.Rbac.RolePerList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
@@ -15,14 +15,16 @@
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv">
+    <a:Lv x:Name="_lv" ViewMode="Table" GroupName="modname">
         <a:Ex.Menu>
             <a:Menu>
                 <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
             </a:Menu>
         </a:Ex.Menu>
-        <DataTemplate>
-            <a:Dot ID="Name" Margin="10,0,10,0" />
-        </DataTemplate>
+        <a:Cols>
+            <a:Col ID="funcname" Title="功能" Width="120" />
+            <a:Col ID="name" Title="权限" Width="160" />
+            <a:Col ID="note" Title="说明" Width="300" />
+        </a:Cols>
     </a:Lv>
 </a:Tab>
