--- a/Client/Dt.Mgr/Rbac/Role/RoleWin.xaml
+++ b/Client/Dt.Mgr/Rbac/Role/RoleWin.xaml
@@ -10,7 +10,7 @@
     <a:Tabs a:Ex.Dock="Right">
         <l:RoleUserList x:Name="_userList" />
         <l:RoleMenuList x:Name="_menuList" />
-        <l:RolePermissionList x:Name="_permissionList" />
+        <l:RolePerList x:Name="_permissionList" />
         <l:RoleGroupList x:Name="_groupList" />
     </a:Tabs>
 </a:Win>
