--- a/Client/Dt.Mgr/Root/Menu/RootMenu.xaml
+++ b/Client/Dt.Mgr/Root/Menu/RootMenu.xaml
@@ -4,23 +4,28 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
     Title="所有"
-    Icon="主页">
+    Icon="汉堡">
 
     <a:Tab.Menu>
         <a:Menu>
-            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnSearch" />
-            <a:Mi x:Name="_miReset" ID="重置常用" Icon="刷新" ShowInPhone="Icon" Click="OnReset" Visibility="Collapsed" />
+            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Call="OnSearch" />
+            <a:Mi ID="收藏" Icon="收藏" ShowInPhone="Icon" Call="OnFav" />
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv" ViewMode="Tile" SelectionMode="None" ItemClick="OnItemClick">
+    <a:Lv x:Name="_lv" SelectionMode="None" ItemClick="OnItemClick" ItemHeight="NaN">
+        <a:Ex.Menu>
+            <a:Menu Opening="OnMenuOpening">
+                <a:Mi ID="收藏" Icon="收藏" Click="OnFav" />
+            </a:Menu>
+        </a:Ex.Menu>
         <DataTemplate>
-            <Grid Padding="12">
-                <StackPanel VerticalAlignment="Center">
-                    <a:Dot ID="Icon" Call="Def.Icon" FontSize="30" Foreground="{StaticResource 主蓝}" Margin="0,0,0,4" HorizontalAlignment="Center" />
-                    <a:Dot ID="Name" HorizontalAlignment="Center" />
+            <Grid Padding="10" ColumnDefinitions="Auto,*" MinHeight="60">
+                <a:Dot ID="Icon" Call="Def.Icon" FontSize="30" Foreground="{StaticResource 主蓝}" Margin="0,0,10,0" VerticalAlignment="Center" />
+                <StackPanel VerticalAlignment="Center" Grid.Column="1">
+                    <a:Dot ID="Name" VerticalAlignment="Center" />
+                    <a:Dot ID="Note" Call="Def.小灰" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" />
                 </StackPanel>
-                <a:Dot ID="Warning" Call="Def.Warning" HorizontalAlignment="Right" VerticalAlignment="Top" />
             </Grid>
         </DataTemplate>
     </a:Lv>
