--- a/Client/Dt.Mgr/Root/Menu/SearchMenu.xaml
+++ b/Client/Dt.Mgr/Root/Menu/SearchMenu.xaml
@@ -10,32 +10,19 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <a:Lv x:Name="_lv" ItemClick="OnItemClick" Grid.Row="1">
+        <a:Lv x:Name="_lv" SelectionMode="None" ItemClick="OnItemClick" ItemHeight="NaN" Grid.Row="1">
+            <a:Ex.Menu>
+                <a:Menu Opening="OnMenuOpening">
+                    <a:Mi ID="收藏" Icon="收藏" Click="OnFav" />
+                </a:Menu>
+            </a:Ex.Menu>
             <DataTemplate>
-                <Grid Padding="6">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Border Background="{StaticResource 主蓝}" Height="50" Width="50" VerticalAlignment="Center">
-                        <TextBlock Text="{Binding Data.Icon, Converter={StaticResource CvIconNameToChar}}"
-                                   FontFamily="{StaticResource IconFont}"
-                                   Foreground="White"
-                                   VerticalAlignment="Center"
-                                   HorizontalAlignment="Center" />
-                    </Border>
-                    <Grid Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="1">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <a:Dot ID="Name" VerticalAlignment="Center" HorizontalAlignment="Left" />
-                        <a:Dot ID="Note"
-                               Call="Def.小灰"
-                               VerticalAlignment="Top"
-                               HorizontalAlignment="Left"
-                               Grid.Row="1"/>
-                    </Grid>
+                <Grid Padding="10" ColumnDefinitions="Auto,*" MinHeight="60">
+                    <a:Dot ID="Icon" Call="Def.Icon" FontSize="30" Foreground="{StaticResource 主蓝}" Margin="0,0,10,0" VerticalAlignment="Center" />
+                    <StackPanel VerticalAlignment="Center" Grid.Column="1">
+                        <a:Dot ID="Name" VerticalAlignment="Center" />
+                        <a:Dot ID="Note" Call="Def.小灰" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" />
+                    </StackPanel>
                 </Grid>
             </DataTemplate>
         </a:Lv>
