--- a/Client/Dt.UIDemo/FormView/BaseCellDemo.xaml
+++ b/Client/Dt.UIDemo/FormView/BaseCellDemo.xaml
@@ -84,6 +84,7 @@
                             <Button Content="空数据源" Click="OnNull" />
                         </StackPanel>
                         <a:CBool Title="表单只读" ID="IsReadOnly" />
+                        <a:CBool Title="自动获得焦点" ID="AutoFocus" />
                         <StackPanel Orientation="Horizontal">
                             <Button Content="警告信息" Click="OnWarn" />
                             <Button Content="提示信息" Click="OnMsg" />
